fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,9 @@ body::-webkit-scrollbar-thumb {
   background-color: #3b53da;
 }
 
-body {
+/* body {
   overflow-x: hidden;
-}
+} */
 
 body {
   transition: color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
